--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/carousel": "^7.11.2",
     "@mantine/core": "^7.11.1",
     "@mantine/form": "^7.11.2",
     "@mantine/hooks": "^7.11.1",
     "@tabler/icons-react": "^3.10.0",
     "axios": "^1.7.2",
+    "embla-carousel-react": "^7.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1"
